Fixes background shift when animating

--- a/styles/home.css
+++ b/styles/home.css
@@ -7,8 +7,17 @@
     text-shadow: 0 1px 1px rgba(0,0,0,0.3);
 }
 
+#carousel-choices {
+    position: relative;
+    z-index: 2;
+}
+
 #carousel-choices .button {
     padding: 8px 16px;
+}
+
+#carousel .slide {
+    padding-top: 50px;
 }
 
 #carousel .slide > .column {
